--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1.5",
         "openspout/openspout": "^4.13.1",
-        "power-components/livewire-powergrid": "^5.1",
+        "power-components/livewire-powergrid": "^5.3",
+        "smalot/pdfparser": "^2.8",
+        "spatie/pdf-to-text": "^1.52",
         "yajra/laravel-datatables-oracle": "^10.10"
     },
     "require-dev": {
